--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			rel="stylesheet"
 			href="/styles.css"
 		/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
 		<title>Sign-up Form</title>
 	</head>
 	<body>
@@ -33,8 +36,13 @@
 				</div>
 			</div>
       <div class="container2">
-        <div class="heading-container"></div>
-        <div class="forms-container"></div>
+        <div class="heading-container">
+          <p class="heading-text">Hey! Give us your info, everyone knows it is perfectly safe sharing all your info online at any time!</p>
+        </div>
+        <div class="forms-container">
+          <p class="form-text">Hurry! This is a limited time offer!</p>
+
+        </div>
         <div class="button-container"></div>
       </div>
 		</div>
