--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 				<div class="button-container">
           <button type="submit" form="signupform">Create Account</button>
           <p id="acc-exist-text">Already gave us all your info? Log in <a href="">here</a>.</p>
+          <p id="project-credit">This project is part of <a href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-sign-up-form">theOdinProject</a> curriculum.</p>
         </div>
 			</div>
 		</div>
