change css to be more responsive and cleaner

--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
 	<body>
 		<div class="wrapper1">
 			<div class="container1">
-				<div class="img-container">
-					<img
-						class="background"
-						src="\assets\daniel-sessler-hnw3Al47-KE-unsplash.jpg"
-					/>
-					<span class="img-credit"
-						>Photo by
+				<img
+					class="background-img"
+					src="\assets\daniel-sessler-hnw3Al47-KE-unsplash.jpg"
+				/>
+				<span class="img-credit">
+          Photo by
 						<a
 							href="https://unsplash.com/@danielsessler?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
 							>Daniel Seßler</a
@@ -45,14 +44,13 @@
 							href="https://unsplash.com/photos/trees-surrounded-by-body-water-during-daytime-hnw3Al47-KE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
 							>Unsplash</a
 						>
-					</span>
-					<span class="logo-container"
-						><img
+        </span>
+				<div class="logo-container">
+          <img
 							class="logo"
 							src="\assets\odin-lined.png"
-						/><span class="logo-text">ODIN</span></span
-					>
-				</div>
+						/><p class="logo-text">ODIN</p>
+        </div>
 			</div>
 			<div class="container2">
 				<div class="heading-container">
@@ -76,7 +74,7 @@
             <input type="text" id="lname" name="lname" required><br>
             <label for="email" class="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br>
-            <label for="npassword" class="npassword">Enter New Password:</label><br>
+            <label for="npassword" class="npassword">Enter Password:</label><br>
             <input type="password" id="npassword" name="npassword"  class="invalid2" placeholder="Enter Password" required/><br>
             <button class="passwordvisibility" id="passwordvisibility"><i class="fas fa-eye" id="icon"></i></button>
             <label for="cpassword" class="cpassword">Confirm Password:</label><br>
