add placeholder text for some form inputs

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 					<p class="form-text">Hurry! This is a <em>limited</em> time offer!</p>
           <form id="signupform">
             <label for="fname" class="fname">First Name:</label><br>
-            <input type="text" id="fname" name="fname" required><br>
+            <input type="text" id="fname" name="fname" placeholder="First Name..." required><br>
             <label for="lname" class="lname">Last Name:</label><br>
-            <input type="text" id="lname" name="lname" required><br>
+            <input type="text" id="lname" name="lname" placeholder="Last Name..." required><br>
             <label for="email" class="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
+            <input type="email" id="email" name="email" placeholder="Email@email.com..." required><br>
             <label for="npassword" class="npassword">Enter Password:</label><br>
-            <input type="password" id="npassword" name="npassword"  class="invalid2" placeholder="Enter Password" required/><br>
+            <input type="password" id="npassword" name="npassword"  class="invalid2" placeholder="Enter Password..." required/><br>
             <button class="passwordvisibility" id="passwordvisibility"><i class="fas fa-eye" id="icon"></i></button>
             <label for="cpassword" class="cpassword">Confirm Password:</label><br>
-            <input type="password" id="cpassword" name="cpassword"  class="invalid2" placeholder = "Enter Password" required />
+            <input type="password" id="cpassword" name="cpassword"  class="invalid2" placeholder = "Confirm Password..." required/>
           </form>
           <div class="pmessage-container">
             <p id="extext" class="hidden">Password(s) must:</p>
